@@ -14,18 +14,30 @@
     <description>Example service for Binis CodeGen library</description>
 
     <properties>
-        <java.version>17</java.version>
-        <binis.version>1.1.3</binis.version>
+        <java.version>21</java.version>
+        <binis.version>1.1.8</binis.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <postgresql.version>42.5.4</postgresql.version>
-        <spring.version>3.1.0</spring.version>
-        <spring-security.version>6.0.3</spring-security.version>
+        <spring.version>3.1.4</spring.version>
+        <spring-security.version>6.1.0</spring-security.version>
 
         <main-class>net.binis.example.service.AnnotationExampleApplication</main-class>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+
         <dependency>
             <groupId>dev.binis</groupId>
             <artifactId>code-generator-annotation</artifactId>
@@ -103,17 +115,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.15.0</version>
+            <version>2.15.2</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
-            <version>2.15.0</version>
+            <version>2.15.2</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.15.0</version>
+            <version>2.15.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -124,6 +136,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>dev.binis</groupId>
@@ -144,10 +162,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.11.0</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>-Xplugin:BinisCodeGen</arg>
+                        <arg>--enable-preview</arg>
+<!--                        <arg>-Xplugin:BinisCodeGen</arg>-->
                     </compilerArgs>
                 </configuration>
             </plugin>
